# Singleton_Serial_Commuication_Manager

./: CMakeLists.txt  README.md
header/: Serial_Manager.hpp
src/: Serial_Manager.cpp  main.cpp
